--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:url" content="https://iydebu.me/WebTest/" />
 <meta property="og:title" content="Devashish:- Marketing for games" />
 <meta property="og:description" content="i want to study marketing for games" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="https://i.ibb.co/41kPgHF/Devashish.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:url" content="https://iydebu.me/WebTest/" />
 <meta property="twitter:title" content="Devashish:- Marketing for games" />
 <meta property="twitter:description" content="i want to study marketing for games" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:image" content="https://i.ibb.co/41kPgHF/Devashish.png" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
 </head>
